test/scc_test/stmt/semantic-errors/049.a
049.t:5:12: error: expression must have struct or union type